Bug 1699075 [Linux] Check GBM buffer object before we get a file descriptor from it, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D108770